# mlx-inference-service

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py
app/routes/: embeddings.py  health.py  models.py  rerank.py
app/services/: embedding_service.py  model_manager.py  reranker_service.py
app/utils/: __init__.py  logging.py
tests/: conftest.py  test_api.py  test_config.py  test_embedding_service.py  test_enabled_models.py  test_idle_unloading.py  test_model_manager.py  test_reranker_service.py
