[project]
name = "mlx-inference-service"
version = "0.1.0"
description = "MLX inference service for embeddings and reranking"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.128.0,<1.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
    "rich>=14.2.0,<15.0.0",
    "huggingface-hub>=0.36.0,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "numpy>=1.24,<2.0",
    "safetensors>=0.7.0,<1.0.0",
    "sentencepiece>=0.2.1,<1.0.0",
    "mlx>=0.30.3,<1.0.0",
    "mlx-lm>=0.29.1,<1.0.0",
    "transformers>=4.57.6,<5.0.0",
    "mlx-embeddings>=0.0.5,<1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3,<1.0.0",
    "pyrefly>=0.46.3,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
]

[project.scripts]
serve = "app.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"] # Unused arguments common in pytest fixtures

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true # Preserve types, even if a file imports `from __future__ import annotations`.

[tool.pyrefly]
python-version = "3.11"
project-excludes = ["**/venv*", "**/.venv*"]
